# Ag-n

./: CMakeLists.txt  README.md  build.sh
res/shaders/: basic.frag
src/: Camera.cpp  Camera.hpp  Level.cpp  Level.hpp  Mesh.cpp  Mesh.hpp  Player.cpp  Player.hpp  Renderer.cpp  Renderer.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Weapon.cpp  Weapon.hpp  main.cpp
